<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Alpaki</string>

    <!--bottom navigation bar-->
    <string name="bottom_navigation_bar_first_element">Pulpit</string>
    <string name="bottom_navigation_bar_second_element">Marzenia</string>
    <string name="bottom_navigation_bar_third_element">Zadania</string>
    <string name="bottom_navigation_bar_fourth_element">Profil</string>

    <!--desktop fragment-->
    <string name="text_desktop_header_latest">Najnowsze marzenia</string>
    <string name="text_desktop_header_categories">Kategorie marzeń</string>
    <string name="text_desktop_header_sponsors">Sponsorzy</string>
    <string name="text_desktop_header_dreamers">Marzyciele</string>
    <string name="text_desktop_header_volunteers">Wolontariusze</string>
    <string name="button_desktop_more">Więcej</string>

    <string name="text_desktop_category_visit">Chcę\npojechać</string>
    <string name="text_desktop_category_gift">Chcę\ndostać</string>
    <string name="text_desktop_category_meet">Chcę\npoznać</string>
    <string name="text_desktop_category_become">Chcę\nbyć</string>
    <string name="text_desktop_category_give">Chcę\ndać</string>
    <string name="text_desktop_category_quick_mode">Tryb\nszybki</string>

    <!--textInputLayouts errors-->
    <string name="text_error_missing_field">Pole nie może być puste</string>
    <string name="text_error_wrong_code">Podano nieprawidłowy kod aktywacyjny</string>
    <string name="text_error_wrong_email">Podano nieprawidłowy adres email</string>
    <string name="text_error_wrong_phone">Podano nieprawidłowy numer telefonu</string>
    <string name="text_error_wrong_password">Hasło musi mieć minimum 8 znaków</string>
    <string name="text_error_login">Logowanie się nie powiodło</string>
    <string name="text_error_register">Rejestracja się nie powiodła</string>

    <!--profile fragment-->
    <string name="text_profile_header_title">Zaloguj się</string>
    <string name="hint_profile_email" tools:ignore="Typos">Adres email</string>
    <string name="hint_profile_password">Hasło</string>
    <string name="button_profile_login">Zaloguj się</string>
    <string name="button_profile_register">Zarejestruj się</string>
    <string name="text_forgotten_password">Nie pamiętasz hasła?</string>

    <!--my profile fragment-->
    <string name="text_profile_active">Aktywny</string>
    <string name="text_profile_unactive">Nieaktywny</string>
    <string name="button_profile_logout">Wyloguj się</string>
    <string name="active_dream">Aktywne marzenie</string>
    <string name="done_dreams">Spełnione marzenia</string>
    <string name="more_about_dreamer">WIĘCEJ O MARZYCIELU</string>

    <!--reset password fragment-->
    <string name="button_reset_password_send_request">Wyślij e-mail do zmiany hasła</string>
    <string name="title_reset_password">Przypomnienie hasła</string>

    <!--register first fragment-->
    <string name="title_register_register">Zarejestruj się</string>
    <string name="hint_register_name">Imię</string>
    <string name="hint_register_surname">Nazwisko</string>
    <string name="hint_register_phone">Nr telefonu</string>
    <string name="hint_register_brand">Wybierz swój oddział</string>
    <string name="hint_register_email" tools:ignore="Typos">Adres email</string>
    <string name="hint_register_password">Hasło</string>
    <string name="hint_register_activation_code">Kod aktywacyjny</string>
    <string name="text_register_lack_of_activation_code">Nie masz kodu aktywacyjnego? Skontaktuj się ze swoim koordynatorem.</string>
    <string name="text_register_terms">Zakładając konto, akceptujesz Regulamin oraz Politykę Prywatności Fundacji Mam Marzenie.</string>
    <string name="button_register_register">Zarejestruj się</string>
    <string name="more_about_dreamer_active_dream_card_view_button_text">WIĘCEJ O MARZYCIELU</string>
    <string name="more_text_done_dream_card_view">WIĘCEJ</string>

    <!--tasks fragment-->
    <string name="hint_show_more">Więcej</string>
    <string name="example_task_description">
        Wiesz już kto będzie Twoim Marzycielem. Pierwszym krokiem na drodze do realizacji jego marzenia jest przygotowanie tzw. „lodołamacza”. Skontaktuj się z rodzicami Marzyciela i dowiedz się jakie są jego zainteresowania, hobby i co lubi. Na tej podstawie zdecyduj jaki prezent pozwoli Ci zdobyć zaufanie Twojego Marzyciela i nawiązać z nim nić porozumienia. Teraz pozostały już tylko zakupy i gotowe! Pamiętaj aby zachowywać dowody wszystkich transakcji dokonanych w trakcie realizacji marzenia
    </string>
    <string name="button_show_dream">Zobacz marzenie</string>
    <string name="button_all_tasks_done">Wszystkie zadania zostały zrobione</string>
    <string name="button_all_tasks">Wszystkie zadania</string>
</resources>
