<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.alpaki.presentation.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="@color/white"
            tools:context=".presentation.login.ProfileFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/guideline_vertical_size" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/guideline_vertical_size" />

            <com.example.alpaki.presentation.util.customs.TitleBarView
                android:id="@+id/titleBarView"
                android:layout_width="match_parent"
                android:layout_height="?android:actionBarSize"
                android:text="@string/title_register_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xmedium"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/titleBarView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_name"
                    android:text="@={viewModel.name}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextSurname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.surname}"
                    android:hint="@string/hint_register_surname"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.tiper.MaterialSpinner
                android:id="@+id/layoutTextBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout"
                android:hint="@string/hint_register_brand"
                android:paddingHorizontal="@dimen/padding_xxsmall"
                android:layout_marginTop="@dimen/margin_xsmall"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextSurname"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextBrand">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_phone"
                    android:text="@={viewModel.phone}"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_email"
                    android:text="@={viewModel.email}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextPasswordRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextEmail"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/dimGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_password"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTextActivationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xsmall"
                android:theme="@style/TextInputLayout"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextPasswordRegister">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextActivationCode"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_activation_code"
                    android:text="@={viewModel.code}"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textLackOfActivationCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_register_lack_of_activation_code"
                android:textAppearance="@style/Text.H6.Primary.Roboto.Regular"
                android:textColor="@color/dimGray"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/layoutTextActivationCode" />

            <View
                android:id="@+id/view_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_medium"
                android:background="@color/whiteSmoke"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/textLackOfActivationCode" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textTerms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/text_register_terms"
                android:textAppearance="@style/Text.H6.Primary.Roboto.Regular"
                android:textColor="@color/dimGray"
                app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/view_divider" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNext"
                style="@style/Button.Text.Color.Green"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:layout_marginBottom="@dimen/margin_xsmall"
                android:text="@string/button_register_register"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/textTerms" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
